--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body>
     <div class="container">
         <div class="box">
+            <button id="theme"></button>
             <div id="solve">0012+23432</div>
             <div id="btns">
                 <div class="btn" id="ac">AC</div>
